--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -53,24 +53,17 @@
     <UnityVersion>2020.3.30f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\VoidEvent.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\CubeGrow.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\AllListeners.cs" />
+    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\ScalerListener.cs" />
     <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\HitPublisher.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\UIHitCounter.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\IntEvent.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\BaseGameEventListener.cs" />
+    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\HitCounterListener.cs" />
     <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\CamRotation.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\ColorChanger.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\BaseGameEvent.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\GameObjectEvent.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Scripts\StringEvent.cs" />
     <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\SFXManager.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\CamShake.cs" />
-    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\CubeParticles.cs" />
+    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\CamShakeListener.cs" />
+    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\ParticlesListener.cs" />
+    <Compile Include="Assets\Plugins\PanettoneGames\GenEvents\Demo\Scripts\ColorListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -762,6 +755,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="GenEvents.COre.csproj">
+      <Project>{77D82E0B-649E-2D55-66B0-06325DF58C02}</Project>
+      <Name>GenEvents.COre</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
